--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
    <h1>I will be a Successful Web Developer InShaAllah</h1>
+   <h1>I will be a Earn Halal Money InShaAllah</h1>
+   <h1>I will perform Hajj InShaAllah</h1>
 </body>
 </html>
