--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
    <h1>I will be a Successful Web Developer InShaAllah</h1>
    <h1>I will be a Earn Halal Money InShaAllah</h1>
    <h1>I will perform Hajj InShaAllah</h1>
+   <p>Do What You Love Most</p>
 </body>
 </html>
